Closed Bug 15276 Opened 25 years ago Closed 25 years ago

can't paste into apps after mozilla quits

Categories

(Core :: DOM: Editor, defect, P2)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: buster, Assigned: mikepinkerton)

References

()

Details

using debug build with code from last night (9/29/99) on WinNT, I can copy/paste
from the editor/Gfx text controls just fine.  But if I copy from the editor and
try to paste into another application, nothing happens.
Severity: normal → major
Priority: P3 → P2
Summary: copy/paste doesn't work between apps on windows → [regression] copy/paste doesn't work between apps on windows
Target Milestone: M11
Assignee: akkana → rods
Windows clipboard issue -- assigning to Rod for diagnosis.
just tried it, and it works for me, however i noticed that sometimes the last
character is dropped. how do we want to deal with this bug in relation to the
last one?
Assignee: rods → pinkerton
please stop assigning these to rod.
Status: NEW → ASSIGNED
it seems to be a matter of paste not working correctly into other apps after
mozilla has quit. while mozilla is running, paste works perfectly (no chars
dropped, etc).
Summary: [regression] copy/paste doesn't work between apps on windows → can't paste into apps after mozilla quits
i don't think this is a regression, per se, since i'm pretty sure the code hasn't
changed. my bet is that it never worked correctly. we're probably not calling
ForceDataToClipboard() when the app quits on win32.

removing "regression" from the summary and updating to the correct cause.
Yes, I am sure this is not being called because of XP issues. I had it working
at one time, then it got a little confusing about who owned what and when to put
it there etc.

I think the issue was knowning when to do the force to clipboard. Is there
a notification for that, Steve?

Mike, if you want me to help take a look at the Win code on Monday if you want.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
fix checked into the end of main to flush data to the clipboard before app shuts
down.
Status: RESOLVED → VERIFIED
works now in 11/ 4 build...I conducted simple test:

copy from ender and paste into windows notepad...
You need to log in before you can comment on or make changes to this bug.