Fix bug 15276 by flushing the data to the clipboard right before app shuts down. (r=davidm).